# irsp

./: .gitignore  create_sample_index.py  logging.conf  main.py  model_testing.ipynb  model_testing2.ipynb  nltk_dependencies.py  pyproject.toml  test.ipynb  test_trec_eval.ipynb  tfidf_test.py
.ipynb_checkpoints/: model_testing2-checkpoint.ipynb
deserializer/: pom.xml
deserializer/src/main/java/: Deserializer.kt
deserializer/src/main/kotlin/: Deserializer.kt
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/conf/: axios.ts  conf.ts
frontend/src/features/Dialogs/: ButtonActionConfirmationDialog.tsx
frontend/src/features/Home/: Home.tsx
frontend/src/features/Indices/: CreateIndexDialog.tsx  IndexCardDetail.tsx  IndexDetail.tsx  Indices.tsx  IndicesOverview.tsx  indexDtos.ts  indicesDtos.ts  (+1 more)
frontend/src/redux/: store.ts
resources/anltr/: BooleanGrammar.g4
resources/docs/: czech_documents.json  english_documents.json
src/api/: documents.py  dtos.py  indices.py  indices_dtos.py
src/index/: doc_id_service.py  document.py  document_info.py  index.py  index_config.py  indexer.py  term_info.py
src/parsing/: boolean_parser.py  boolean_query_parser.py
src/preprocessing/: Preprocessor.py  czech_lemmatizer.py  czech_stemmer.py  preprocessing.py  preprocessor_configurations.py
src/preprocessing/boolean/: boolean_parser.py
src/search/: boolean_model.py  cosine_similarity.py  search_model.py  tfidf.py  tfidf_model.py
src/search_model/: bm25_model.py  boolean_model.py  search_model.py  tfidf_model.py
(+42 files in other folders)
