[tool.poetry]
name = "irsp"
version = "0.1.0"
description = ""
authors = ["Václav Honzík <honzikv@students.zcu.cz>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
nltk = "^3.7"
simplemma = "^0.6.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
